--- a/src/themes/structure/Layout.module.css
+++ b/src/themes/structure/Layout.module.css
@@ -55,7 +55,7 @@
     min-height: 100vh;
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
 }
 
 .BackgroundWrapper { 
